# Proyecto-deepseek-2026

./: .gitignore  DeepSeek  README.md  conectar_directo.bat  litellm_config.yaml  metrics.json  requirements.txt
.claude/worktrees/gifted-black/: .env.example  README.md  conectar_directo.bat  future_roadmap.md
.claude/worktrees/gifted-black/app/: interactive_chat.py  server.py
.claude/worktrees/gifted-black/deepseek_client/: profiles.py
.claude/worktrees/gifted-black/tools/: extract_data.py  full_storage_dump.py  global_token_scanner.py  manual_spy.py  test_api_direct.py
.claude/worktrees/objective-bartik/deepseek_client/: driver.py  fingerprint.py  human_behavior.py
.claude/worktrees/objective-bartik/tools/: find_token_binary.py  get_auth_data.py
.claude/worktrees/sad-lovelace/: conectar_directo.bat  deepseek_session.json  pyproject.toml  requirements.txt  troubleshooting_history.md
.claude/worktrees/sad-lovelace/app/: interactive_chat.py
.claude/worktrees/sad-lovelace/deepseek_client/: config.py  driver_pool.py  history.py  human_behavior.py
.claude/worktrees/sad-lovelace/deepseek_client/resources/: spy_mode.js  ui_scanner.js
app/: anthropic_proxy.py  dashboard.py  interactive_chat.py  server.py
app/templates/: index.html
deepseek_client/: __init__.py  client.py  config.py  driver.py  driver_pool.py  fingerprint.py  profiles.py  token_manager.py  tts_manager.py
tools/: battle_test.py  deep_auth_extract.py  deep_auth_extract_v2.py  extract_chat_tokens.py  final_extract.py  raw_token_search.py  run_ui_scan.py  smoke_test.py  test_advanced_features.py  test_multiturn.py  test_prompts.json  test_streaming.py  ui_scan_proxy.py
